--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
   color: #111;
   font-size: 18px;
+
+  transition: all 0.5s;
 }
 
 h1 {
@@ -8,6 +10,30 @@ h1 {
   border-bottom: 2px solid black;
 
   font-size: 3rem;
+}
+
+.toggle-theme {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 5px 10px;
+
+  background-color: white;
+  border-radius: 8px;
+  border: 2px solid black;
+  outline: none;
+
+  font-size: 1rem;
+  letter-spacing: 0.3px;
+
+  cursor: pointer;
+
+  transition: all 0.5s;
+}
+
+img {
+  width: 600px;
+  max-width: 100%;
 }
 
 .table {
